manifests/istio/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: grafana
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: ignore
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: sz-pg-oam-docker-hub-001.tendcloud.com/library/grafana:0.1.5
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        volumeMounts:
        - mountPath: /data/grafana
          name: grafana-data
      volumes:
      - name: grafana-data
        emptyDir: {}
---
