manifests/istio/servicegraph.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: servicegraph
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: ignore
      labels:
        app: servicegraph
    spec:
      containers:
      - name: servicegraph
        image: sz-pg-oam-docker-hub-001.tendcloud.com/library/servicegraph:latest
        ports:
          - containerPort: 8088
        args:
        - --prometheusAddr=http://prometheus:9090
---
apiVersion: v1
kind: Service
metadata:
  name: servicegraph
spec:
  ports:
  - name: http
    port: 8088
  selector:
    app: servicegraph
---
