manifests/istio/zipkin.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: ignore
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: sz-pg-oam-docker-hub-001.tendcloud.com/library/zipkin:latest
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  #type: NodePort
  ports:
  - name: http
    port: 9411
    #nodePort: 30411
  selector:
    app: zipkin
---
